[tool.poetry]
name = "usb-can-driver"
version = "0.1.0"
description = ""
authors = ["CrinitusFeles <crinitusfeles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
loguru = "^0.7.2"
pydantic = "^2.8.2"
rich = "^13.7.1"
serial-client = {git = "https://github.com/CrinitusFeles/SerialClient"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
