[project]
name = "usb-can-driver"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = [
    "serial-client",
]

[tool.uv.sources]
serial-client = { git = "https://github.com/CrinitusFeles/SerialClient" }

[tool.setuptools.packages.find]
where = ["."]
include = ["usb_can_driver*"]

[tool.uv]
config-settings = { editable_mode = "compat" }
